# Atlas

./: .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  mcp.json.example
.cargo/: config.toml
.github/workflows/: integration-tests.yml  nightly.yml  performance.yml  security-audit.yml  unified-quality.yml
data/: web_sources.json.example
docs/: MCP_Tools_Reference.md  OPERATIONAL_RUNBOOK.md  SKILL_INDEX.md  TASK_QUEUE_SCHEMA.json  TOOL_SELECTION_GUIDE.md  tools_registry.json
docs/design/: ARCHITECTURAL_BLUEPRINT.md  NEURO_SYMBOLIC_MCP_ARCHITECTURE.md
docs/research/: AI Agentic Coding Loop Research.md  Agent Skills, MCP Data, Automation, Token Savings.md  Architecting Resilient Multi-Agent Ecosystems_ A Deep Dive into Transactional Planning and Proactive Guardrails.md  Beyond Probabilistic Brittleness_ The Neuro-Symbolic-Causal Architecture for Trustworthy AI.md  Breaking the Memory Wall_ A Strategic Report on Next-Generation KV Cache Management for Long-Context LLMs.md  Coding Agent Skills and Open Source.md  Comprehensive Technical Analysis_ Securing Enterprise AI Infrastructure and the Model Context Protocol (MCP).md  Secure Infrastructure for Agentic AI_ A Comprehensive Report on MCP, Sandboxing, and Runtime Governance.md  Technical Report_ The Agent-to-Agent (A2A) Protocol and the Future of Multi-Agent Interoperability.md  Technical Report_ Transactional Guarantees and Contextual Integrity in Multi-Agent LLM Orchestration.md  The Agentic Web_ Architecting Documentation for the LLM Inference Economy.md  The Enterprise Guide to AI-Ready Observability_ Implementing and Scaling the Model Context Protocol (MCP).md  The Enterprise Guide to Agentic RAG_ Architecture, Implementation, and Strategic Evolution.md  The Frontier of Self-Evolving AI_ Architectures for Autonomous Agent Growth.md  The State of MCP_ 2026 Infrastructure, Security, and Agent Architecture.md  (+3 more)
e2e/: README.md  package.json  playwright.config.ts  smoke.spec.ts
scripts/: AUDIT.md  README.md  audit_skill_quality.sh  build_skill_index.sh  check-freshness.sh  download-models.sh  fix_yaml_frontmatter.py  harvest_skills_from_github.sh  neural_janitor.sh  normalize_skill.sh  rebuild-skill-index.sh  review_lessons_evolution.sh  truncate_oversized_skills.sh  validate-skills.sh  validate_skills_local.sh
skills/10-youtube/: README.md  (+12 more)
src/: config.rs  constitution.rs  lib.rs  main.rs  metrics.rs  process_utils.rs  rerank.rs
tests/: mcp_e2e.rs  mcp_tool_smoke.rs  tool_smoke_args.json
(+180 files in other folders)
